[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/ChargeMeterback.png" type="Texture" id=1]
[ext_resource path="res://Assets/ChargeMeterFill.png" type="Texture" id=2]
[ext_resource path="res://Assets/ChargeMeterOutline.png" type="Texture" id=3]
[ext_resource path="res://Assets/GameUI.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/coolvetica rg.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Assets/Fonts/coolvetica rg.ttf"

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[node name="GameUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 81.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_right = 169.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 4 )
text = "Esc: Return to Menu
Q: How to play
Enter: Reset Level"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 1024.0
margin_bottom = 559.0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 384.0
margin_top = 212.0
margin_right = 639.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 1 )
text = "Test Text Here"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 563.0
margin_right = 1024.0
margin_bottom = 600.0
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer2"]
margin_right = 444.0
margin_bottom = 37.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerMeter" type="TextureProgress" parent="VBoxContainer/HBoxContainer2"]
margin_left = 448.0
margin_right = 576.0
margin_bottom = 37.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 2 )

[node name="StrokesLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 580.0
margin_right = 1024.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Strokes:"
align = 2

[node name="PopupDialog" type="PopupDialog" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="RichTextLabel" type="RichTextLabel" parent="PopupDialog"]
anchor_bottom = 0.301
margin_left = 292.0
margin_top = 129.0
margin_right = 807.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Goal: Hit the white marker under the yellow, rotating arrow with your ball to win.

Controls:

Move Mouse left and right to aim.

Hold down left mouse button and move mouse up and down to adjust power. Release left mouse button to hit the ball.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="PopupDialog"]
margin_left = 492.0
margin_top = 290.0
margin_right = 607.0
margin_bottom = 310.0
text = "Return To Game"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PopupDialog/Button" to="." method="_on_Button_pressed"]
